[gd_scene load_steps=6 format=3 uid="uid://2uqyrmvyqs5u"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_g8gp6"]
[ext_resource type="Texture2D" uid="uid://cacut6v7r2b0n" path="res://art/mainmenu/normal background.png" id="2_0gpkn"]
[ext_resource type="PackedScene" uid="uid://pgvsr3tvtgpr" path="res://scenes/options/scenes/settings_tab_container.tscn" id="2_b1py2"]

[sub_resource type="SystemFont" id="SystemFont_algh3"]
font_names = PackedStringArray("Monospace")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_yg058"]
font_names = PackedStringArray("Monospace")
subpixel_positioning = 0

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8gp6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0gpkn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -12.0
offset_right = -7.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_algh3")
theme_override_font_sizes/font_size = 30
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="separater" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Exit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("SystemFont_yg058")
theme_override_font_sizes/font_size = 20
text = "Exit"

[node name="settings_tab_container" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_b1py2")]
layout_mode = 2
size_flags_vertical = 3

[connection signal="button_down" from="MarginContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_pressed"]
