extends Control
class_name OptionsMenu

@onready var exit_button = $MarginContainer/VBoxContainer/Exit_Button as Button

signal exit_options_menu

func _ready():
	exit_button.button_down.connect(on_exit_pressed)
	set_process(false)

func on_exit_pressed() -> void:
	exit_options_menu.emit()
	set_process(false)


func _on_exit_button_pressed():
	get_tree().change_scene_to_file("res://scenes/menu.tscn")
